# bso-nsk.ru

./: .gitignore  manage.py  nebo.py  passenger_wsgi.py  pyproject.toml
bso_nsk/: asgi.py  urls.py  views.py  wsgi.py
bso_nsk/catalog/: admin.py  apps.py  models.py  urls.py  views.py
bso_nsk/catalog/management/commands/: nebo.py
bso_nsk/catalog/migrations/: 0001_initial.py  0002_product_price_product_visible.py  0003_product_slug_alter_category_parent_and_more.py  0004_category_image.py  0005_category_description_alter_product_description.py  0006_catalogsettings.py  0007_alter_product_image_alter_product_slug.py  0008_alter_category_slug.py  0009_product_sort.py
bso_nsk/settings/: base.py  thumbnails.py
static/assets/css/: bootstrap.css  style.css
static/assets/images/content/: grodyHeaderjpg
templates/: base.html  breadcrumb.html  catalog.html  contacts.html  footer.html  header.html  home.html  product.html
